<resources>
    <string name="app_name_release">MLTD小幫手</string>
    <string name="app_name_dev">MLTD小幫手Dev</string>
    <string name="service_error">伺服器錯誤，請稍後再嘗試。</string>

    <!--  Card lang  -->
    <string name="lang_ja">日文版</string>
    <string name="lang_zh">繁中版</string>

    <string name="skill_score_up">スコアアップ</string>
    <string name="skill_score_up_zh">分數提升</string>
    <string name="skill_combo_bonus">コンボボーナス</string>
    <string name="skill_combo_bonus_zh">Combo獎勵</string>
    <string name="skill_life_recovery">ライフ回復</string>
    <string name="skill_life_recovery_zh">回復體力</string>
    <string name="skill_damage_guard">ダメージガード</string>
    <string name="skill_damage_guard_zh">減免傷害</string>
    <string name="skill_continue_combo">コンボ継続</string>
    <string name="skill_continue_combo_zh">續行Combo</string>
    <string name="skill_strengthen_judgment">判定強化</string>
    <string name="skill_strengthen_judgment_zh">判定強化</string>
    <string name="skill_double_boost">ダブルブースト</string>
    <string name="skill_double_boost_zh">雙重增幅</string>
    <string name="skill_multi_up">マルチアップ</string>
    <string name="skill_overclock">オーバークロック</string>
    <string name="skill_overload">オーバーロンド</string>
    <string name="skill_empty">---</string>

    <!--  IdolFragment  -->
    <string name="fragment_idol_max_master_rank">マスターランクMax :</string>
    <string name="fragment_idol_max_master_rank_zh">明星階級Max :</string>
    <string name="fragment_idol_life">ライフ :</string>
    <string name="fragment_idol_life_zh">體力 :</string>
    <string name="fragment_idol_vocal">ボーカル :</string>
    <string name="fragment_idol_vocal_zh">歌唱力 :</string>
    <string name="fragment_idol_dance">ダンス :</string>
    <string name="fragment_idol_dance_zh">舞蹈力 :</string>
    <string name="fragment_idol_visual">ビジュアル :</string>
    <string name="fragment_idol_visual_zh">視覺力 :</string>
    <string name="fragment_idol_total">総アピール :</string>
    <string name="fragment_idol_total_zh">總表現值 :</string>
    <string name="fragment_idol_center_effect">センター効果 :</string>
    <string name="fragment_idol_center_effect_zh">Center效果 :</string>
    <string name="fragment_idol_skill">スキル :</string>
    <string name="fragment_idol_skill_zh">技能 :</string>
    <string name="fragment_idol_status_hint">括弧はマスターランクMax能力を示します</string>
    <string name="fragment_idol_status_hint_zh">括弧內為明星階級Max能力</string>
    <string name="fragment_idol_level">LV :</string>

    <!--  IdolListFragment  -->
    <string name="fragment_idol_list_search_hint">卡片名稱</string>
    <string name="fragment_idol_list_filter_idol_type">屬性</string>
    <string name="fragment_idol_list_filter_rarity">稀有度</string>
    <string name="fragment_idol_list_filter_extra_type">卡片種類</string>
    <string name="fragment_idol_list_filter_skill">技能</string>
    <string name="fragment_idol_list_filter_skill_duration">技能間隔</string>
    <string name="fragment_idol_list_filter_center_effect">Center效果</string>
    <string name="fragment_idol_list_filter_bt_filter">搜尋</string>

    <!--  PictureActivity  -->
    <string name="activity_picture_transition_name" translatable="false">PictureActivityCard</string>
    <string name="activity_picture_select_pic_size">選擇儲存圖片尺寸</string>

    <!--  Toast  -->
    <string name="toast_update_idol_data_success">有新資料下拉刷新後更新!</string>
    <string name="toast_save_pic_success">儲存成功</string>
    <string name="toast_save_pic_fail">儲存失敗</string>

    <!--  Notification  -->
    <string name="notification_idol_data_updating">更新資料中...</string>
    <string name="notification_update_notification_title">更新資料通知</string>

    <!--  MainActivity navigation item  -->
    <string name="nav_main_card">卡片</string>
    <string name="nav_main_version">圖鑑版本</string>
    <string name="nav_main_about">關於</string>
    <string name="nav_title_function">功能</string>
    <string name="nav_title_event">活動</string>
    <string name="nav_main_event">活動資訊</string>
    <string name="nav_main_current_event">最新活動資訊</string>
    <string name="nav_title_settings">設定</string>
    <string name="nav_main_check_update">檢查更新</string>

    <!--  EventDetailFragment  -->
    <string name="fragment_event_detail_event_date">活動時間\n%s</string>
    <string name="fragment_event_detail_event_boost_date">後半開始時間\n%s</string>

    <!--  AboutActivity  -->
    <string name="activity_about_message">此 APP 為非官方遊戲資料查詢 APP 與 偶像大師 百萬人演唱會！ 劇場時光、アイドルマスター ミリオンライブ! シアターデイズ 無任何關係， APP 內遊戲相關資訊版權皆屬於 BANDAI NAMCO Entertainment。</string>
    <string name="activity_about_api_by">api by <u>https://api.matsurihi.me/docs/</u></string>
    <string name="activity_about_create_by">app create by 永遠17歳のKK</string>

    <!--  item_event_border  -->
    <string name="item_last_point_pt_border">pt排行榜</string>
    <string name="item_last_point_score_border">分數排行榜</string>
    <string name="item_last_point_score2_border">分數2排行榜</string>
    <string name="item_last_point_score_total_border">分數總和排行榜</string>
    <string name="item_last_point_loung_board">休息室排行榜</string>
    <string name="item_last_point_rank">%d位</string>
    <string name="item_last_point_update">更新時間：%s</string>

    <!--  item_point  -->
    <string name="item_point_half_hour">-0.5h</string>
    <string name="item_point_one_hour">-1h</string>
    <string name="item_point_one_day">-24h</string>
    <string name="item_point_score">分數</string>
    <string name="item_point_rank">排名</string>

    <!--  EventChartActivity  -->
    <string name="activity_event_chart_rank_no">%s位</string>

    <!--  EventChart  -->
    <string name="event_chart_rank_no">%s位 : </string>
    <string name="event_chart_data_empty">Loading...</string>

    <!--  Dialog  -->
    <string name="dialog_title_card_version">選擇圖鑑版本</string>
    <string name="dialog_progress">讀取中...</string>

</resources>
